--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{content-for 'head'}}
     <link rel="stylesheet" href="assets/ember-riak-explorer.css">
+    <link rel="stylesheet" href="assets/vendor.css">
     {{content-for 'head-footer'}}
   </head>
   <body>
