--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {{content-for 'head'}}
+  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="assets/ember-riak-explorer.css">
   <link rel="stylesheet" href="assets/vendor.css">
   {{content-for 'head-footer'}}
